--- a/ShapeLab/MainWindow.ui
+++ b/ShapeLab/MainWindow.ui
@@ -332,6 +332,9 @@
            <property name="maximum">
             <double>9.000000000000000</double>
            </property>
+           <property name="value">
+            <double>9.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item>
